// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChapterNavItem bottom renders correctly 1`] = `
<DocumentFragment>
  <div
    class="commenting"
  >
    <button
      class="commenting__content commenting--toc__button btn btn--light btn--small"
      type="button"
    >
      4. Chapter name
    </button>
    <div
      class="commenting__actions btn-group"
      role="group"
    >
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="mock text"
        type="button"
      >
        <i
          aria-label="mock text"
          class="fa fa-chevron-up"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="mock text"
        type="button"
      >
        <i
          aria-label="mock text"
          class="fa fa-chevron-down"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="mock text"
        type="button"
      >
        <i
          aria-label="mock text"
          class="fas fa-trash-alt"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterNavItem middle renders correctly 1`] = `
<DocumentFragment>
  <div
    class="commenting"
  >
    <button
      class="commenting__content commenting--toc__button btn btn--light btn--small"
      type="button"
    >
      3. Chapter name
    </button>
    <div
      class="commenting__actions btn-group"
      role="group"
    >
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="mock text"
        type="button"
      >
        <i
          aria-label="mock text"
          class="fa fa-chevron-up"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="mock text"
        type="button"
      >
        <i
          aria-label="mock text"
          class="fa fa-chevron-down"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="mock text"
        type="button"
      >
        <i
          aria-label="mock text"
          class="fas fa-trash-alt"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterNavItem top renders correctly 1`] = `
<DocumentFragment>
  <div
    class="commenting"
  >
    <button
      class="commenting__content commenting--toc__button btn btn--light btn--small active"
      type="button"
    >
      1. Chapter name
    </button>
    <div
      class="commenting__actions btn-group"
      role="group"
    >
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="mock text"
        type="button"
      >
        <i
          aria-label="mock text"
          class="fa fa-chevron-up"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="mock text"
        type="button"
      >
        <i
          aria-label="mock text"
          class="fa fa-chevron-down"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="mock text"
        type="button"
      >
        <i
          aria-label="mock text"
          class="fas fa-trash-alt"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
